<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/activity_requisitosbuses"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requisitos_bus"
        android:textSize="@dimen/titulo1"
        android:textColor="@color/colorAzulObscuro"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>



        <CheckBox android:id="@+id/checkbox_requi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requisito1"
            android:onClick="onCheckboxClicked"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"/>


    <CheckBox android:id="@+id/checkbox_requi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requisito2"
        android:onClick="onCheckboxClicked"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>


    <CheckBox android:id="@+id/checkbox_requi3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requisito3"
        android:onClick="onCheckboxClicked"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>


    <CheckBox android:id="@+id/checkbox_requi4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requisito4"
        android:onClick="onCheckboxClicked"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>


    <CheckBox android:id="@+id/checkbox_requi5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requisito5"
        android:onClick="onCheckboxClicked"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>


    <CheckBox android:id="@+id/checkbox_requi6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requisito6"
        android:onClick="onCheckboxClicked"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>


    <CheckBox android:id="@+id/checkbox_requi7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requisito7"
        android:onClick="onCheckboxClicked"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:onClick="regresarBus"/>


</LinearLayout>
