<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intermedio_gestion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ec.edu.epn.proyecto2.IntermedioGestion">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen1"
        android:textSize="@dimen/titulo1"
        android:textAlignment="center"
        android:text="@string/tittleSubmenu"
        android:textColor="@color/colorAzulObscuro"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="@dimen/btnGrande"
        android:text="@string/title_activity_editar_bus"
        android:onClick="editarBus"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/lbl_eliminar"
        android:textSize="@dimen/btnGrande"
        android:onClick="eliminar"/>

</LinearLayout>
