<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editar_bus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ec.edu.epn.proyecto2.EditarBus">

    <TextView
        android:layout_marginTop="@dimen/margen2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unidad"
        android:textSize="@dimen/titulo1"
        android:text="@string/title_activity_editar_bus"
        android:textAlignment="center"
        android:textColor="@color/colorAzulObscuro"/>


    <TextView
        android:layout_marginTop="@dimen/margen3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nombreunidad"
        android:textSize="@dimen/btnGrande"
        android:text="@string/nombreBuses"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtnombreUnidad"
        android:ems="10"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/punidad"
        android:textSize="@dimen/btnGrande"
        android:text="@string/placaBus"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtplacaUnidad"
        android:ems="10"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/perounidad"
        android:text="@string/permisoBus"
        android:textSize="@dimen/btnGrande"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtpermisounidad"
        android:ems="10"
        android:inputType="number"
        />

    <Button
        android:layout_marginTop="@dimen/margen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGuardar"
        android:text="GUARDAR"
        android:onClick="guardar"
        android:layout_gravity="center"
        />


</LinearLayout>
