<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_historico"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ec.edu.epn.proyecto2.CrearHistorico">

    <TextView
        android:layout_marginTop="@dimen/margen2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unidad"
        android:textSize="@dimen/titulo1"
        android:text="@string/btnIngresarHistorico"
        android:textAlignment="center"
        android:textColor="@color/colorAzulObscuro"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/punidad"
        android:textSize="@dimen/btnGrande"
        android:text="@string/Fecha_horaSalida"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtfecha1"
        android:ems="10"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/perounidad"
        android:text="@string/Fecha_horaLLegada"
        android:textSize="@dimen/btnGrande"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtfecha2"
        android:ems="10"
        android:inputType="number"
        />

    <Button
        android:layout_marginTop="@dimen/margen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGuardar"
        android:text="GUARDAR"
        android:onClick="guardar"
        android:layout_gravity="center"
        />

</LinearLayout>
