<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_recaudo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ec.edu.epn.proyecto2.CrearRecaudo">

    <TextView
        android:layout_marginTop="@dimen/margen2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unidad"
        android:textSize="@dimen/titulo1"
        android:text="@string/btnIngresarRecaudo"
        android:textAlignment="center"
        android:textColor="@color/colorAzulObscuro"
        android:layout_marginBottom="@dimen/margen2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/punidad"
        android:layout_marginTop="@dimen/margen2"
        android:textSize="@dimen/btnGrande"
        android:text="@string/btn_Recaudo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtMonto"
        android:ems="10"
        android:inputType="numberDecimal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/perounidad"
        android:text="@string/fecha"
        android:textSize="@dimen/btnGrande"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtfecha"
        android:ems="10"
        android:inputType="date"
        />

    <Button
        android:layout_marginTop="@dimen/margen4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGuardar"
        android:text="GUARDAR"
        android:onClick="guardar"
        android:layout_gravity="center"
        />

</LinearLayout>
